--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git"
   },
   "scripts": {
-    "lint": "yarn lint:js && yarn lint:style",
+    "lint": "npm run lint:js && npm run lint:style",
     "lint:js": "eslint --ext \".js,.mjs,.vue\" .",
     "lint:style": "stylelint \"**/*.{vue,css}\"",
     "test": "ava --verbose",
