--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "workspaces": [
     "packages/*"
   ],
+  "bin": "packages/create-nuxt-app",
   "homepage": "https://github.com/nuxt/create-nuxt-app#readme",
   "repository": {
     "url": "https://github.com/nuxt/create-nuxt-app.git",
